<resources>
    <string name="app_name">TouchTheNumber</string>

    <string name="ruleOne">・数字を小さい順に</string>
    <string name="ruleTwo">ボタンをタップせよ。</string>
    <string name="ruleThree">・数字が奇数ならば</string>
    <string name="ruleFour">ボタンを２回タップせよ。</string>
    <string name="start">ゲーム開始</string>
    <string name="clear">クリアタイム</string>
    <string name="missCount">ミスの回数</string>
    <string name="end">ゲーム終了</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_gameactivity">gameactivity</string>
</resources>
