<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView9"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="67dp"
        android:text="@string/start"
        android:textSize="38dp" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/textView8"
        android:layout_alignParentTop="true"
        android:layout_alignRight="@+id/textView8"
        android:layout_marginTop="75dp"
        android:text="@string/ruleOne"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="30dp" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView"
        android:layout_centerHorizontal="true"
        android:text="@string/ruleTwo"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="30dp" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView"
        android:layout_alignStart="@+id/textView"
        android:layout_centerVertical="true"
        android:text="@string/ruleThree"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="30dp" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ruleFour"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="30dp"
        android:layout_below="@+id/textView9"
        android:layout_alignLeft="@+id/textView8"
        android:layout_alignStart="@+id/textView8" />
</RelativeLayout>
